Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOnnsbmXGL5QdakI342TzW",
+      "authorship_tag": "ABX9TyOCZA/kTg3U3Hs5X5CTsn/R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "_8FTkLlmUTwC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_8FTkLlmUTwC",
+        "outputId": "02488eb3-f944-455c-eda5-e46cf62d049f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "손서빈바보\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"손서빈바보\")"
+      ]
     }
   ]
 }
